| 9

- Don't record compilation time;
- Fix version macro;
- Restrict pointers;
- Use fixed-width types;
- Update naming convention;
- Update pointer style;

| 8

- Update naming convention;
- Support C++99;
- Tag development releases;
- Update copyright notices;

| 7

- Don't use susinfo;
- Update CMake style;
- Update code style;
- Don't use global variables;
- Update compiler options;
- Fortify sources;
- Don't use Zap;
- Remove some errors;
- Remove platform-specific behaviour;

| 6

- Fix errors during parameter checks;
- Use susinfo more;
- Update help screen;

| 5

- Fix version number not being updated;

| 4

- Fix wrong license notice type being used;

| 3

- Add message to static assertion in main;
- Fix license notices saying 'GNU General Public License' instead of 'GNU Affero General Public License';

| 2

- Fix indentations;
- Remove useless constant in calc;

| 1

- Use typeof instead of typeof_unqual;
- Use CHAR_WIDTH instead of CHAR_BIT;

| 0

- Initial;