@@ -1,11 +1,0 @@
-cmake_minimum_required(VERSION 3.8)
-
-project(
-	agbsum
-	VERSION	9
-	DESCRIPTION "GBA ROM header checksum patcher."
-	HOMEPAGE_URL "https://mandelbrot.dk/agbsum"
-	LANGUAGES C
-)
-
-add_subdirectory(agbsum)
